# mofem-cephas

./: .clang-format  .dockerignore  .gitignore  .gitmodules  BuildDockerStack.sh  CONTRIBUTING.md  DISTRIBUTING.md  Dockerfile  Dockerfile-build  Dockerfile-build-env  Dockerfile-build-min-env  Dockerfile-build-pop-test  Dockerfile-build-pop-test-env  Dockerfile-build-um  Dockerfile-distelli  Dockerfile-jenkins  Dockerfile-spack-biosensors  Dockerfile-spack-build  Dockerfile-spack-env  Dockerfile-spack-env-colab  Dockerfile-spack-jupyter  Dockerfile-spack-jupyter-labs-indentation  Dockerfile-spack-jupyterhub  Dockerfile-spack-jupyterhub-labs-indentation  Dockerfile-spack-mofem  Dockerfile-spack-mofem-cpehas-testing  Dockerfile-spack-mofem-dependencies  Dockerfile-spack-mofem-testing  Dockerfile-spack-softmech  Dockerfile-spack-volume  Home.md  LICENSE  LICENSE.md  README.md  bitbucket-pipelines.yml  distelli-manifest.yml  docker_build_script.sh  jenkins._spack_install.sh  jenkins_core.sh  jenkins_single_um.sh  (+2 more)
mofem/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Doxyfile.in  INSTALL  LICENSE  MoFEMConfig-version.cmake.in  MoFEMConfig.cmake.in  Version.cmake  Version.cmake.in  docker_build_mofem_script.sh
mofem/atom_tests/: CMakeLists.txt  activate_deactivate_dofs.cpp  add_blockset.cpp  add_cubit_meshsets.cpp  add_cubit_meshsets.in  adol-c_atom.cpp  bases_on_reference_rectangle.cpp  bernstein_bezier_generate_base.cpp  bernstein_bezier_genrate_base.cpp  boundary_marker.cpp  build_composite_problem.cpp  build_large_problem.cpp  build_problems.cpp  check_base_functions_derivatives_on_tet.cpp  check_base_functions_derivatives_tri.cpp  check_base_functions_direvatives_on_tet.cpp  check_base_functions_direvatives_tri.cpp  child_and_parent.cpp  continuity_check_on_contact_prism_side_ele.cpp  continuity_check_on_skeleton_3d.cpp  continuity_check_on_skeleton_with_simple_2d.cpp  continuity_check_on_skeleton_with_simple_2d_for_h1.cpp  continuity_check_on_skeleton_with_simple_2d_for_hcurl.cpp  continuity_check_on_skeleton_with_simple_2d_for_hdiv.cpp  cubit_bc_test.cpp  dg_projection.cpp  disp01_1parts.h5m  disp01_2parts.h5m  disp01_3parts.h5m  dm_build_partitioned_mesh.cpp  dm_create_subdm.cpp  dm_mofem.cpp  dm_partitioned_no_field.cpp  edge_and_bubble_shape_functions_on_quad.cpp  field_axpy_atom_test.cpp  field_blas.cpp  field_blas_axpy.cpp  field_blas_lambda.cpp  field_blas_set_vertex_dofs.cpp  field_evaluator.cpp  (+86 more)
mofem/cmake/: CMakeLists.txt  CTestScript.cmake  CTestScript_rdb-srv1.cmake  CTestScript_rdb-srv1_continous.cmake  FindADOL-C.cmake  FindBoost.cmake  FindCGM.cmake  FindLASSO.cmake  FindMESHKIT.cmake  FindMFront.cmake  FindMOAB.cmake  FindMed.cmake  FindPETSC.cmake  FindSLEPC.cmake  FindTAO.cmake  FindTetGen.cmake  FindTriangle.cmake  FindiMesh.cmake  GetGitRevisionSimple.cmake  PrecompiledHeaders.cmake  ResolveCompilerPaths.cmake  RunAndComp.cmake  WithSpack.cmake  jenkins-valgrind.supp  rdb-srv1-valgrind.supp
mofem/doc/: CMakeLists.txt  DoxygenLayout.xml  about_us.dox  authors_page.dox  being_a_good_citizen.dox  chatillo.html  customdoxygen.css  extra_style.css  faq.dox  footer.html  google_analytics.html  google_search_widget.dox  google_search_widget.html  header.html  ideas_of_mofem.dox  installation.dox  main.dox  mastodon-timeline.css  mastodon-timeline.js  mod_gallery.dox  mofem_at_a_glance.html  motivation.dox  naming_convention.dox  news.dox  opportunities.dox  references.bib  reporting_bug.dox  school_2021.dox  school_2023.dox  school_page.dox  search_tags.html  style.html  tutorials.dox  twitter_widged.html  writing_documentation.dox
mofem/include/: CMakeLists.txt  Common.hpp  DeprecatedPetsc.hpp  Exceptions.hpp  Includes.hpp  MoFEM.hpp  PetscSmartObj.hpp  Templates.hpp  Types.hpp  config.h  config.h.in  definitions.h  version.h  version.h.in
mofem/meshes/: 4seasons.cub  Cube_RVE.h5m  HEX_element_char_length.cub  HEX_element_char_length.jou  LShape.cub  LShape.jou  Mesh_1.med  PerforatedPlate.h5m  PerforatedPlate.jou  QUAD_element_char_length.cub  QUAD_element_char_length.jou  T3_corner_notch.cub  T3_corner_notch.h5m  T3_corner_notch.jou  T3_horiz.cub  T3_horiz.jou  T3_horiz_assym.h5m  T3_horiz_assym.jou  TET_element_char_length.cub  TET_element_char_length.jou  TRI_element_char_length.cub  TRI_element_char_length.jou  Thermal_Exp1.h5m  Tinterface.jou  accel01.cub  accel01.jou  airfoil.jou  bcoverlap01.h5m  bcoverlap01.jou  brick_slice.cub  brick_slice.jou  brick_slice_thermal.cub  brick_slice_thermal.jou  brick_with_hole.jou  chees.jou  chees_atom.jou  circe_and_quead_mesh.cub  circe_and_quead_mesh.h5m  circle_cut.h5m  comb01.jou  (+84 more)
mofem/scripts/: CMakeLists.txt  (+27 more)
mofem_v0.0.1/: BCMultiIndices.hpp  CMakeLists.txt  CTestConfig.cmake  CTestConfig_University.cmake  CTestScript.cmake  CTestScript_dimitrios_experimental.cmake  CTestScript_live_cd.cmake  CTestScript_lukasz-laptop.cmake  CTestScript_michael_experimental.cmake  CTestScript_rdb-srv1.cmake  CTestScript_rdb-srv1_continous.cmake  CTestScript_rdb-srv1_experimental.cmake  DofsMultiIndices.hpp  Doxyfile  Doxyfile.in  EntsMultiIndices.hpp  FEM.c  FEM.h  FEMMultiIndices.hpp  FieldInterface.cpp  FieldInterface.hpp  H1.c  H1HdivHcurlL2.h  Hdiv.c  INSTALL  L2.c  ProblemsMultiIndices.hpp  README.md  SnesCtx.hpp  TagMultiIndices.hpp  TsCtx.hpp  common.hpp  config.h.in  dataStructures.cpp  dataStructures.hpp  lapack_wrap.h  live-cd-valgrind.supp  meshRefine.cpp  moabFEMethod_Core.cpp  moabFEMethod_Core.hpp  (+20 more)
mofem_v0.1/: AdjacencyMultiIndices.hpp  BCMultiIndices.hpp  CMakeLists.txt  DofsMultiIndices.hpp  Doxyfile.in  EntsMultiIndices.hpp  FEM.c  FEM.h  FEMMultiIndices.hpp  FieldInterface.cpp  FieldInterface.hpp  FieldMultiIndices.hpp  FieldUnknownInterface.hpp  H1.c  H1HdivHcurlL2.h  Hdiv.c  L2.c  LICENSE  ProblemsMultiIndices.hpp  SeriesMultiIndices.hpp  SnesCtx.cpp  SnesCtx.hpp  TagMultiIndices.hpp  TsCtx.cpp  TsCtx.hpp  common.hpp  config.h.in  definitions.h  hi.jou  name_change.sh  version.h.in
mofem_v0.2/: CMakeLists copy.txt  CMakeLists.txt  Doxyfile.in  INSTALL  LICENSE  MoFEMConfig.cmake.in
(+3654 files in other folders)
